src/sass/pages/restaurant/_about-kitchen.scss
//HEADER PLUG TO BE DELETED IN HTML AND CSS UPON COMPLETION OF SECTION MARKUP
.header-plug {
  display: block;
  height: 200px;
  background-color: tomato;
}

// VERTICAL SECTION STRIPES
.vertical-left-stripe::before,
.vertical-right-stripe::after {
  content: '';
  display: block;
  width: 0;
  height: 0;
  border: 1px solid rgba(186, 186, 186, 0.4);
  filter: blur(0.5px);
  position: absolute;
  top: 0;
  @include mobile {
    height: 1191px;
  }
}

.vertical-left-stripe::before {
  left: 34vw;
}

.vertical-right-stripe::after {
  left: 66vw;
}

.about-our-kitchen {
  background-color: $colorBgLemon;
  padding-bottom: 20px;
  position: relative;
}

.about-kitchen__title {
  font-family: 'Times New Roman';
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  color: $colorTextSecondary;
  padding-bottom: 12px;
  padding-top: 16px;
  @include tablet {
    padding-bottom: 4px;
    padding-top: 120px;
    font-size: 32px;
    line-height: 37px;
  }
}

.about-kitchen__logo {
  font-family: 'Film P3';
  font-size: 40px;
  line-height: 43px;
  letter-spacing: 0.3em;
  color: $colorTextAddressMobTab;
  @include tablet {
    font-size: 64px;
    line-height: 69px;
  }
}

.kitchen-card {
  margin-bottom: 32px;

  display: flex;
  align-items: center;
  row-gap: 28px;
  @include tablet {
    margin-top: 24px;
  }
}
.kitchen-card--top {
  margin-top: 12px;

  flex-wrap: wrap;
  position: relative;
  margin-bottom: 32px;
  @include tablet {
    margin-bottom: 142px;
  }
  @include desktop {
    margin-bottom: 162px;
  }
}

.kitchen-card__photo {
  background: #dadada;
  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
  border-radius: 2px;
}

.kitchen-card__photo--top {
  margin-left: auto;
  position: relative;
  z-index: 5;
  @include tablet {
    width: 400px;
    height: 524px;
    position: absolute;
    right: 65px;
    top: -310px;
  }
  @include desktop {
    width: 460px;
    height: 574px;
    right: 85px;
    top: -310px;
  }
}

.kitchen-card__description {
  font-weight: 600;
  font-size: 12px;
  line-height: 15px;
  letter-spacing: 0.02em;
  @include tablet {
    font-size: 16px;
    line-height: 20px;
  }
}
.kitchen-card__description--gray {
  color: $colorTextPrimary;
  width: 258px;
  // padding-bottom: 28px;
  @include tablet {
    width: 439px;
  }
  @include desktop {
    width: 518px;
  }
}
.kitchen-card__description--orange {
  color: $colorBrown;
  padding-left: 20px;
  padding-bottom: 20px;
  @include tablet {
    padding-left: 48px;
    width: 312px;
  }
  @include desktop {
    padding-left: 32px;
  }
}

// KITCHEN SLIDER ARROWS
.slider-arrows {
  display: inline-flex;
  width: 100%;
  gap: 32px;
  margin-top: 20px;
  justify-content: flex-end;
  padding-right: 2px;
}

.right-arrow,
.left-arrow {
  width: 32px;
  height: 32px;
  background-image: url(../images/slider-arrow.svg);
  background-size: cover;
  outline: none;
  border: none;
  background-color: transparent;
}

.right-arrow {
  transform: rotate(180deg);
}

// KITCHEN SLIDER CONTAINER
.kitchen-slider-box {
  position: relative;
  z-index: 5;
  @include mobile {
    padding-left: 69px;
  }
}

.kitchen-slider {
  position: relative;
  margin-right: -15px;
  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
  border-radius: 2px;
}

.test {
  img {
    display: block;
    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
    border-radius: 2px;
  }
}

div.kitchen-slide {
  overflow: visible;
  margin-right: 24px;
}

